<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forestt"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BERTHA"
        android:textColor="@color/myGrey"
        android:textSize="60sp"
        android:layout_gravity="center"
        android:layout_marginBottom="190dp"

        />

    <EditText
        android:id="@+id/editText_username"

        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:ems="14"

        android:gravity="center"
        android:hint="Username"
        android:textColor="@color/myWhite"
        android:textColorHint="@color/myWhite" />

    <EditText
        android:id="@+id/editText_password"

        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:background="@drawable/rounded_edittext"

        android:ems="14"
        android:gravity="center"
        android:hint="Password"

        android:inputType="textPassword"
        android:textColor="@color/myWhite"
        android:textColorHint="@color/myWhite"

        />

    <CheckBox
        android:id="@+id/login_remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="190dp"
        android:buttonTint="@color/myGreen"
        android:checked="true"
        android:hint="Remember" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom|center"

        android:layout_marginBottom="130dp"
        android:background="@drawable/button_rounded"

        android:backgroundTint="@color/myGreen"
        android:text="Login"

        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/myWhite" />

    <Button
        android:id="@+id/fb_button"

        android:layout_width="200dp"
        android:layout_height="90dp"

        android:layout_gravity="bottom|left"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="9dp"

        android:background="@drawable/facebook"
        />

    <Button
        android:id="@+id/twit_button"

        android:layout_width="200dp"
        android:layout_height="50dp"

        android:layout_gravity="bottom|right"
        android:layout_marginBottom="71dp"
        android:layout_marginRight="13dp"

        android:background="@drawable/twitter"
        />



    <TextView
        android:id="@+id/login_message_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</android.support.design.widget.CoordinatorLayout>