...
        android:backgroundTint="@color/myGreen"
        android:background="@drawable/button_rounded"
        android:textColor="@color/myWhite"/>

    <!--<Button-->

        <!--android:id="@+id/logout_button"-->

        <!--android:layout_width="80dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="right"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginRight="10dp"-->
...
        android:id="@+id/gestureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hey"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

...
